# docuscraper

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  typer_commands_docs.txt  typer_docs.txt
api/: main.py
cli/: main.py
doc_scraper_engine/: crawler.py  engine.py  processor.py  scraper.py
frontend/: index.html
