[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-scraper"
version = "0.1.0"
description = "A CLI tool to crawl and scrape documentation websites into a single text file."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.5",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "typer[rich]>=0.12.3",
]

[project.scripts]
doc-scraper = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["doc_scraper_engine", "cli"]
