[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docuscraper"
version = "0.1.0"
description = "A CLI tool to crawl and scrape documentation websites into a single text file."
authors = [
    { name = "Ondřej Baštař", email = "jsembasta@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.5",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "typer[rich]>=0.12.3",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "slowapi>=0.1.9",
    "aiofiles>=24.1.0",
]

[project.scripts]
docuscraper = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["doc_scraper_engine", "cli", "api"]
